[gd_scene load_steps=4 format=3 uid="uid://dialog_box_scene"]

[ext_resource type="Script" path="res://scenes/ui/dialog_box.gd" id="1_dialog_box"]
[ext_resource type="Theme" uid="uid://cpdx7u62cktq6" path="res://assets/themes/ui_theme.tres" id="2_ui_theme"]

[sub_resource type="Animation" id="Animation_blink"]
resource_name = "blink"
length = 1.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ContentMargin/ContentHBox/DialogVBox/ContinueIndicator:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.3), Color(1, 1, 1, 1)]
}

[node name="DialogBox" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 40.0
offset_top = 220.0
offset_right = 600.0
offset_bottom = 340.0
theme = ExtResource("2_ui_theme")
script = ExtResource("1_dialog_box")

[node name="Border" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.8, 0.8, 0.9, 1)

[node name="InnerPanel" type="ColorRect" parent="Border"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 0.95)

[node name="ContentMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="ContentHBox" type="HBoxContainer" parent="ContentMargin"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="PortraitContainer" type="MarginContainer" parent="ContentMargin/ContentHBox"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="Portrait" type="TextureRect" parent="ContentMargin/ContentHBox/PortraitContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture_filter = 1
expand_mode = 1
stretch_mode = 5

[node name="DialogVBox" type="VBoxContainer" parent="ContentMargin/ContentHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="SpeakerNameLabel" type="Label" parent="ContentMargin/ContentHBox/DialogVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Speaker Name"

[node name="DialogTextLabel" type="RichTextLabel" parent="ContentMargin/ContentHBox/DialogVBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "Dialog text appears here with typewriter effect."
fit_content = true
scroll_active = false

[node name="ContinueIndicator" type="Label" parent="ContentMargin/ContentHBox/DialogVBox"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 16
text = "â–¼"

[node name="BlinkAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("Animation_blink")
}
